# pyqt-steps

./: .gitignore  README.md
dbus/: call-qtdbus.py  call.py  listen-qtdbus.py  listen.py
editor/: edit.py  editor.py  example.cc
files/: file_crc.py
highlight/: build.sh  clean.sh  configure.py  highlight.cc  highlight.h  highlight.sip  highlighting.sip  pyproject.toml  run.py
llvm-compile/: build.sh  clean.sh  compiler.cc  compiler.h  compiler.sip  configure.py  gcc_options.py  run-pch.py  run-qt.py  run-use-pch.py  run.py  sample-header.h  sample-qt.cc  sample.cc
llvm-tree/: gcc_options.py  llvm-tree.py  run-qt5.sh  run-small.sh  test-qt.cc  test-small.cc
qtdesigner5-plugin/: build.sh  clean.sh  connectionplugin.cc  connectionplugin.h  connectionwidget.cc  connectionwidget.h  designer.sh  example.ui
qtdesigner5-python-plugin/: connectionplugin.py  connectionwidget.py  plugins.py
qtdesigner5-sip/: build.sh  configure.py
reflection/: reflection.py
simple/: button.py  file_tree.py  graphics_scene.py  paint.py  rpm_view.py  sqlite.py  svg.py  tree.py  xml.py
