[build-system]
requires = ["sip >=5, <6", "PyQt-builder >=1.9, <2", "PyQt5"]
build-backend = "sipbuild.api"
# see pyproject_toml.rst

[tool.sip.metadata]
name = "highlight"
requires-dist = "PyQt5"

[tool.sip]
project-factory = "pyqtbuild:PyQtProject"

[tool.sip.project]
abi-version = "12" # important
sip-include-dirs = ["/usr/lib/python3.10/site-packages/PyQt5/bindings", # ArchLinux
                    "/usr/lib64/python3.10/site-packages/PyQt5/bindings"] # Fedora35
# sip-include-dirs = ["/usr/lib/python3.10/site-packages/PyQt6/bindings"]
sip-files-dir = "."
build-dir = "_build"

[tool.sip.bindings.highlight]
# extra-compile-args = ["-DQT_WIDGETS_LIB", "-I/usr/include/qt/QtWidgets", "-I/usr/include/qt", "-I/usr/include/qt/QtCore", "-DQT_GUI_LIB", "-I/usr/include/qt/QtGui", "-DQT_CORE_LIB"]
# extra-link-args = [ ]
# include-dirs = [".", "/usr/include/qt","/usr/include/qt/QtCore", "/usr/include/qt/QtGui", "/usr/include/qt/QtWidgets", # ArchLinux
#                      "/usr/include/qt5","/usr/include/qt5/QtCore", "/usr/include/qt5/QtGui", "/usr/include/qt5/QtWidgets", ] # Fedora 35
# library-dirs = [ ]
# libraries = ["Qt5Core", "Qt5Gui", "Qt5Widgets"]
# tracing=true

sip-file = "highlight.sip"
qmake-QT = ["widgets"]
include-dirs = ["."]
